# SpicyLauncher

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  astratomic.json  jumpy.json  punchy.json  releases.json  thetawave.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  cron.yml
cli/: Cargo.toml
cli/src/: app.rs  args.rs  lib.rs  main.rs  progress.rs
core/: Cargo.toml
core/src/: constant.rs  error.rs  http.rs  lib.rs  release.rs  storage.rs  tracker.rs
core/src/archive/: gz.rs  mod.rs  zip.rs
core/src/github/: api.rs  mod.rs
gui/: .eslintrc.js  Cargo.toml  package-lock.json  package.json  rollup.config.js  svelte.config.js  tsconfig.json
gui/public/: fontface.css  global.css  index.html
gui/src/: App.svelte  currentGame.ts  downloadStore.ts  global.d.ts  main.ts  versionStore.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: app.rs  error.rs  main.rs  progress.rs
gui/src/components/: Changelog.svelte  GameTabs.svelte  LinkRenderer.svelte  ProgressBar.svelte  Sidebar.svelte
gui/src/store/: currentGame.ts  currentVersioning.ts  downloadStore.ts  versionStore.ts
gui/src/styles/: app.scss
gui/src/styles/config/: variables.scss
gui/src/styles/utilities/: colors.scss  typography.scss
gui/src/utils/: constants.ts
