[package]
name = "spicy-launcher-cli"
version = "0.4.1"
description = "Cross-platform launcher for Spicy Lobster games (CLI)"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>", "Spicy Lobster Studio"]
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
anyhow = "1.0.76"
tokio = { version = "1.37.0", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4"
indicatif = "0.17.7"
colored = "2"

[dependencies.spicy-launcher-core]
path = "../core"
