[package]
name = "spicy-launcher-core"
version = "0.2.0"
description = "Core library of the Spicy Lobster launcher"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.17", features = ["json", "stream"] }
thiserror = "1.0.40"
serde = { version = "1.0.160", features = ["derive"] }
dirs-next = "2"
platforms = "3"
guess_host_triple = "0.1"
bytesize = "1.2.0"
flate2 = "1.0.26"
tar = "0.4"
zip = "0.6.4"
ring = "0.16"
log = "0.4"
futures-util = "0.3.28"
