[package]
name = "spicy-launcher-core"
version = "0.3.1"
description = "Core library of the Spicy Lobster launcher"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>", "Spicy Lobster Studio"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "stream"] }
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
dirs-next = "2"
platforms = "3"
guess_host_triple = "0.1"
bytesize = "1.3.0"
flate2 = "1.0.28"
tar = "0.4"
zip = "0.6.6"
ring = "0.17"
log = "0.4"
futures-util = "0.3.29"
