[package]
name = "fish-launcher"
version = "0.1.0"
description = "A cross-platform launcher for Fish Fight"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
default-run="fish-launcher"

[dependencies]

[dependencies.fish-launcher-core]
path = "../core"
