[package]
name = "spicy-launcher"
version = "0.4.1"
description = "Cross-platform launcher for Spicy Lobster games"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>", "Spicy Lobster Studio"]
license = "MIT OR Apache-2.0"
default-run = "spicy-launcher"
edition = "2021"
build = "src/build.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
thiserror = "1.0.57"

[dependencies.spicy-launcher-core]
path = "../../core"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
